catsoop/__STATIC__/themes/base.css
/* ... */
code, kbd, pre, samp, tt {
  font-family: Menlo, Consolas, Courier, Courier New, monospace;
  font-size: 0.95em;
}
blockquote {
  margin-top: 10px;
  margin-bottom: 10px;
  margin-left: 50px;
  padding-left: 15px;
  border-left: 3px solid #ccc;
  background-color: transparent;
  color: #999;
}
code {
  padding: 2px;
  border-radius: 5px;
  background-color: #f0f0f0;
  color: inherit;
}
pre {
  padding: 1em;
  white-space: pre-wrap;
  border-radius: 5px;
  background-color: #f0f0f0;
}
pre code {
  padding: 0px;
}
.catsooplogo {
  text-align: center;
  overflow: hidden;
  background: transparent;
  border: none;
  line-height: 1.1em;
  margin: 0px;
  padding: .1em;
}
h1, h2, h3, h4, h5, h6 {
  line-height: 1.2;
}
h1 small, h2 small, h3 small, h4 small, h5 small, h6 small {
  color: var(--secondary-fore-color);
  display: block;
  margin-top: -0.25rem;
}
h1 {
  font-size: 2.1rem;
}
h2 {
  font-size: 1.7rem;
}
h3 {
  font-size: 1.4rem;
}
h4 {
  font-size: 1.2rem;
}
h5 {
  font-size: 1rem;
}
h6 {
  font-size: calc(1rem / var(--heading-ratio));
}
.cs_base_bold {
  font-weight: bold;
  color: var(--cs-base-bg-color);
}
header {
  width: 100%;
  height: 3rem;
  background-color: var(--cs-base-bg-color);
  margin-left: 0px;
  margin-right: 0px;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  z-index: 1000;
  position: fixed;
  top: 0;
  left: 0;
}

span.line {
  display: inline-block;
}
.cs_nav_wrapper {
}

.cs_navigation {
  text-align: center;
  padding-bottom: 0.5em;
  padding-top: 0.5em;
  width: calc(100%-4em);
  padding-left: 2em;
  padding-right: 2em;
}

.cs_top_navigation {
  border-bottom: 1px solid;
  margin-top:3em;
}

.cs_bottom_navigation {
  border-top: 1px solid;
}

.cs_navigation:empty {
  border: none;
}

.cs_page_body {
  margin-bottom: 5em;
}

.nav-container {
  -ms-flex-preferred-size: 80%;
  flex-basis: 80%;
  height: 100%;
  margin: 0px;
  padding: 0px;
  max-width: var(--cs-max-page-width);
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  vertical-align: middle;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -ms-flex-pack: justify;
  justify-content: space-between;
}
header a, header a:visited {
  color: var(--cs-base-font-color);
  text-decoration: none;
}
header a:hover{
  text-decoration: none;
}
header .icon {
  display: none;
}
header .downarrow {
  font-size: 0.5rem;
  padding-left: 0.25rem;
  padding-bottom: 0.125rem;
  vertical-align: middle;
}
.dropdown .dropbtn {
  border: none;
  outline: none;
  color: var(--cs-base-font-color);
  background-color: inherit;
  font-family: inherit;
  margin: 0px;
  margin-left: 1em;
  margin-right: 1em;
  cursor: pointer;
  -webkit-touch-callout: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.dropdown-content > .divider {
   height:2px;
   background-color: #dddddd;
}

header a {
  margin-left: 1em;
  margin-right: 1em;
}
.dropdown-content {
  display: none;
  position: absolute;
  background-color: #fff;
  min-width: 160px;
  -webkit-box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
  z-index: 1001;
}
.dropdown-content a{
  color: #000;
  display: block;
  padding: 5px 10px 10px 10px;
  width: calc(100%-2em);
  margin-left: 0;
  margin-right: 0;
}
.dropdown-content a:hover, .dropdown-content a:visited:hover{
  color: var(--cs-light-font-color);
  text-decoration: none;
  background-color: var(--cs-light-bg-color);
}
.dropdown-content a:visited{
  color: #000;
  text-decoration: none;
}
.dropdown:hover .dropdown-checkbox:checked + .dropdown-content{
  display:-webkit-box;
  display:-ms-flexbox;
  display:flex;
  -webkit-box-orient:vertical;
  -webkit-box-direction:normal;
  -ms-flex-direction:column;
  flex-direction:column;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  justify-content: center;
}
.dropdown-checkbox {
  display: none;
}
header .cs_header_text {
  font-size: 2.5rem;
  text-decoration: none;
  font-weight: bold;
  -webkit-box-flex: 2;
  -ms-flex-positive: 2;
  flex-grow: 2;
  margin: 0px;
  -ms-flex-preferred-size: 33%;
  flex-basis: 33%;
}
main {
  -webkit-box-flex: 1;
  -ms-flex: 1;
  flex: 1;
  overflow: auto;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  padding-left: 2em;
  padding-right: 2em;
  padding-bottom: 0px;
  padding-top: 0px;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-box-pack: justify;
  -ms-flex-pack: justify;
  justify-content: space-between;
}
.cs_content {
  -ms-flex-preferred-size: 60%;
  flex-basis: 60%;
  min-width: 900px;
  max-width: var(--cs-max-page-width);
}
.anchor {
  display: inline;
  position: relative;
  top: -4rem;
}

.cs_footer {
  text-align: center;
  background: #eee;
  border-top: 0.0625rem solid #ccc;
  padding-top: 2rem;
  padding-bottom: 1rem;
  font-size: 0.875rem;
  width:calc(100%-4em) !important;
  padding-left:2em;
  padding-right:2em;
  margin-left: 0px;
  margin-right: 0px;
  margin-top: 0px;
}
/* Tables */
table {
  border-collapse: collapse;
}
table, th, td {
  padding: 0.25rem;
}

/* Callouts */

.callout {
  margin:1em;
  border:1px solid #ccc;
  border-left-width:0.3rem;
  border-radius:5px;
  padding: 0.5rem 1rem;
}
.callout-title {
  display: inline-block;
  font-weight: bold;
  margin-bottom: 0.6rem;
}

.callout-note {
  border-left-color: var(--callout-color-note);
}
.callout-note > .callout-title {
  border-bottom: 2px solid var(--callout-color-note);
}

.callout-tip {
  border-left-color: var(--callout-color-tip);
}
.callout-tip > .callout-title {
  border-bottom: 2px solid var(--callout-color-tip);
}

.callout-warning {
  border-left-color: var(--callout-color-warning);
}
/* ... */

